--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-#gmail {
+webview {
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
-  top: 0;
+  top: 32px; /* leave some room for the tab bar */
 }
